Trying to call checkGamesPlayed when the game ends

--- a/Firefox/options.html
+++ b/Firefox/options.html
@@ -6,7 +6,7 @@
  <body>
  <h1>Chess Blocker Options</h1>
  <form id="options-form">
- <label for="max-games">Maximum number of games:</label><br>
+ <label for="max-games">Maximum number of losses:</label><br>
  <input type="number" id="max-games" name="max-games"><br><br>
  <label for="username">Chess.com username:</label><br>
  <input type="text" id="username" name="username"><br><br>
