--- a/Chrome/options.html
+++ b/Chrome/options.html
@@ -12,7 +12,7 @@
         <label for="max-games">Max number of losses:</label><br>
         <input type="number" id="max-games" name="max-games"><br><br>
         <label for="username">Chess.com username:</label><br>
-        <input type="text" id="username" name="username"><br><br>
+        <input type="text" id="username" name="username"><br>
         <input type="submit" value="Save">
     </form>
     <script src="options.js"></script>
